compile_err.txt
    Checking tether-core v0.1.0 (C:\Users\inush\Code - Win\Desktop connector fix\crates\tether-core)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `cloud_filter`
  --> crates\tether-core\src\sync\engine.rs:37:31
   |
37 |     pub cf_connection: Option<cloud_filter::root::Connection<tether_cfapi::TetherSyncFilter>>,
   |                               ^^^^^^^^^^^^ use of unresolved module or unlinked crate `cloud_filter`
   |
   = help: if you wanted to use a crate named `cloud_filter`, use `cargo add cloud_filter` to add it to your `Cargo.toml`

warning: unused import: `AuthorizationCode`
 --> crates\tether-core\src\api\auth.rs:6:14
  |
6 |     AuthUrl, AuthorizationCode, ClientId, CsrfToken, PkceCodeChallenge, RedirectUrl, Scope,
  |              ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `warn`
  --> crates\tether-core\src\api\auth.rs:12:21
   |
12 | use tracing::{info, warn};
   |                     ^^^^

warning: unused import: `info`
 --> crates\tether-core\src\sync\cloud_poller.rs:7:22
  |
7 | use tracing::{debug, info, warn};
  |                      ^^^^

warning: unused import: `info`
 --> crates\tether-core\src\sync\queue.rs:8:22
  |
8 | use tracing::{debug, info};
  |                      ^^^^

warning: unused imports: `SyncPriority` and `SyncTaskStatus`
  --> crates\tether-core\src\sync\queue.rs:10:29
   |
10 | use super::task::{SyncTask, SyncPriority, SyncTaskStatus};
   |                             ^^^^^^^^^^^^  ^^^^^^^^^^^^^^

warning: unused import: `SyncTaskStatus`
  --> crates\tether-core\src\sync\worker.rs:10:50
   |
10 | use crate::sync::task::{SyncOperation, SyncTask, SyncTaskStatus};
   |                                                  ^^^^^^^^^^^^^^

warning: unused variable: `db`
  --> crates\tether-core\src\sync\worker.rs:76:5
   |
76 |     db: &Arc<Mutex<SyncDatabase>>,
   |     ^^ help: if this is intentional, prefix it with an underscore: `_db`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0433`.
warning: `tether-core` (lib) generated 7 warnings
error: could not compile `tether-core` (lib) due to 1 previous error; 7 warnings emitted
